--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,17 +7,61 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
         Background="SkyBlue"
-        > 
-        
-    
-    <Grid>
-        
-        <!-- Find Button -->
-        <Button Content="Find" HorizontalAlignment="Center" Margin="0,149,0,0" VerticalAlignment="Top" Height="33" Width="167" Click="Button_Click"/>
-        
-        <!--user input-->
-        <TextBox x:Name="LocationBox" HorizontalAlignment="Center" Margin="0,73,0,0" TextWrapping="Wrap" Text="Enter Location" VerticalAlignment="Top" Width="167" Height="48"/>
+        >
 
+
+    <Grid>
+
+        <!-- Find Button -->
+        <Button Content="Find" 
+        HorizontalAlignment="Center" Margin="0,124,0,0" 
+        VerticalAlignment="Top" 
+        Height="41" Width="156" 
+        Click="Button_Click" 
+        FontSize="20" FontWeight="Bold" FontStyle="Italic" 
+        Background="Gold"
+        >
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}" 
+                    BorderBrush="{TemplateBinding BorderBrush}" 
+                    BorderThickness="2" 
+                    CornerRadius="15" Padding="5">
+                        <ContentPresenter HorizontalAlignment="Center" 
+                                  VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <!-- Background is the colour in the box and foreground is the colour of the text-->
+
+        <!--user input-->
+        <TextBox x:Name="LocationBox" 
+         HorizontalAlignment="Center" 
+         Margin="0,49,0,0" 
+         TextWrapping="Wrap" 
+         VerticalAlignment="Top" 
+         Width="236" 
+         Height="50"
+         FontSize="16" 
+         Background="LightGray"
+         GotFocus="LocationBox_GotFocus" 
+         LostFocus="LocationBox_LostFocus"
+         Text="Enter Location">
+            <TextBox.Template>
+                <ControlTemplate TargetType="TextBox">
+                    <Border Background="{TemplateBinding Background}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    BorderThickness="2"
+                    CornerRadius="15" 
+                    Padding="5">
+                        <!-- This is required for the TextBox to display text -->
+                        <ScrollViewer Margin="0"
+                              x:Name="PART_ContentHost"/>
+                    </Border>
+                </ControlTemplate>
+            </TextBox.Template>
+        </TextBox>
         <!-- Output TextBox -->
         <TextBox x:Name="WeatherDetails" TextWrapping="Wrap" Text="Weather details here" Margin="250,217,250,10"/>
 
